--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Eater&effect=fire-animation" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <title>飘扬的一个网页</title>
 </head>
 <body>
-    <h1>This is PiaoYang</h1>
+    <h1 class="font-effect-fire-animation">This is PiaoYang</h1>
 
     <img src="images/icon.png" alt="The Wuhan university icon">
 
