reset the effection

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>飘扬的一个网页</title>
 </head>
 <body>
-    <h1 class="font-effect-fire-animation">This is PiaoYang</h1>
+    <h1>This is PiaoYang</h1>
 
     <img src="images/icon.png" alt="The Wuhan university icon">
 
     
-    <p>一些文件路径的通用规则：</p>
+    <p class="font-effect-fire-animation">一些文件路径的通用规则：</p>
 
     <ul>
         <li>/  当前目录。</li>
