完成WEB第一章

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="http://46319943.github.io/learngit" target="_blank">飘扬飞机大战</a>
         来了解更多
     </p>
-
+    <button>Change User</button>
     <script src="scripts/main.js"></script>
 </body>
 </html>
