--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Piao Yang">
+    <meta name="description" content="A simple page">
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon"> 
     <link href="https://fonts.googleapis.com/css?family=Eater&effect=fire-animation" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <title>飘扬的一个网页</title>
@@ -32,10 +35,12 @@
     
     <p>
         进入我的游戏
-        <a href="http://46319943.github.io/learngit" target="_blank">飘扬飞机大战</a>
+        <a href="http://46319943.github.io/learngit" title="open game" target="_blank">飘扬飞机大战</a>
         来了解更多
     </p>
     <button>Change User</button>
+    <hr>
+    <input type="text" disabled>
     <script src="scripts/main.js"></script>
 </body>
 </html>
