--- a/HTML-2.html
+++ b/HTML-2.html
@@ -17,6 +17,13 @@
             Hello!
         </text>
     </svg>
+    <img src="images/poster.png" alt="" 
+    sizes= "(max-width: 420px) 400px,
+            (max-width: 820px) 800px,
+            1000px" 
+    srcset="images/icon.png 380w,
+            images/icon2.png 780w">
+    <img src="images/poster.png" alt="" srcset="images/icon.png 1x,images/icon2.png 2x">
 </body>
 
 </html>
