--- a/HTML-2.html
+++ b/HTML-2.html
@@ -21,9 +21,9 @@
     sizes= "(max-width: 420px) 400px,
             (max-width: 820px) 800px,
             1000px" 
-    srcset="images/icon.png 380w,
-            images/icon2.png 780w">
-    <img src="images/poster.png" alt="" srcset="images/icon.png 1x,images/icon2.png 2x">
+    srcset="images/icon2.png 380w,
+            images/icon.png 780w">
+    <img src="images/poster.png" alt="" srcset="images/icon.png,images/icon2.png 1.5x">
 </body>
 
 </html>
