--- a/HTML-2.html
+++ b/HTML-2.html
@@ -17,14 +17,11 @@
             Hello!
         </text>
     </svg>
-    <img src="images/poster.png" alt="" 
-    sizes= "(max-width: 420px) 400px,
+    <img src="images/poster.png" alt="" sizes="(max-width: 420px) 400px,
             (max-width: 820px) 800px,
-            1000px" 
-    srcset="images/icon2.png 380w,
+            1000px" srcset="images/icon2.png 380w,
             images/icon.png 780w">
-    <img src="images/poster.png" alt="" 
-    srcset="images/icon.png,
+    <img src="images/poster.png" alt="" srcset="images/icon.png,
             images/icon2.png 2x">
     <picture>
         <source media="(max-width: 799px)" srcset="elva-480w-close-portrait.jpg">
@@ -33,7 +30,7 @@
     </picture>
     <picture>
         <source type="image/svg+xml" srcset="pyramid.svg">
-        <source type="image/webp" srcset="pyramid.webp"> 
+        <source type="image/webp" srcset="pyramid.webp">
         <img src="pyramid.png" alt="regular pyramid built from four equilateral triangles">
     </picture>
 </body>
