--- a/HTML-4.html
+++ b/HTML-4.html
@@ -42,6 +42,10 @@
             border: 1px solid #999;
         }
 
+        input[type="radio"] {
+            width: 15px;
+        }
+
         input:focus,
         textarea:focus {
             /* 给激活的元素一点高亮效果 */
@@ -61,12 +65,11 @@
             padding-left: 90px;
             /* 和label的大小一样 */
         }
-        
+
         button {
             /* 这个外边距的大小与label和文本输入框之间的间距差不多 */
             margin-left: .5em;
         }
-        
     </style>
 </head>
 
@@ -74,19 +77,175 @@
     <form action="" method="post">
         <div>
             <label for="name">姓名:</label>
-            <input type="text" id="name" value="Default" name="user_name">
+            <input type="text" id="name" name="user_name" placeholder="Enter your name" required>
         </div>
         <div>
             <label for="mail">邮箱:</label>
-            <input type="email" id="mail" name="user_email">
+            <input type="email" id="mail" name="user_email" required>
         </div>
         <div>
             <label for="msg">文本:</label>
-            <textarea id="msg" cols="30" rows="10" name="user_message">Default</textarea>
+            <textarea id="msg" cols="30" rows="10" name="user_message" placeholder="Default" style="resize: none"></textarea>
         </div>
         <div class="button">
             <button type="submit">提交</button>
         </div>
+    </form>
+
+    <form action="" method="post">
+        <fieldset>
+            <legend>表格</legend>
+            <div>
+                <label for="size_1">Small</label>
+                <input type="radio" name="size" id="size_1" value="small">
+            </div>
+            <div>
+                <label for="size_2">Medium</label>
+                <input type="radio" name="size" id="size_2" value="medium">
+            </div>
+            <div>
+                <label for="size_3">Large</label>
+                <input type="radio" name="size" id="size_3" value="large">
+            </div>
+        </fieldset>
+    </form>
+
+    <form action="" method="post">
+        <section>
+            <h2>个人信息</h2>
+            <fieldset>
+                <legend>性别</legend>
+                <ul>
+                    <li>
+                        <label for="sex_1">Male</label>
+                        <input type="radio" name="sex" id="sex_1" value="male">
+                    </li>
+                    <li>
+                        <label for="sex_2">Female</label>
+                        <input type="radio" name="sex" id="sex_2" value="female">
+                    </li>
+                </ul>
+
+            </fieldset>
+
+            <p>
+                <label for="name-">
+                    <span>Name:</span>
+                    <strong>
+                        <abbr title="required">*</abbr>
+                    </strong>
+                </label>
+                <input type="text" id="name-" name="user_name">
+            </p>
+            <p>
+                <label for="email">
+                    <span>Email:</span>
+                    <strong>
+                        <abbr title="required">*</abbr>
+                    </strong>
+                </label>
+                <input type="email" name="user_email" id="email">
+            </p>
+            <p>
+                <label for="psw">
+                    <span>Password:</span>
+                    <strong>
+                        <abbr title="required">*</abbr>
+                    </strong>
+                </label>
+                <input type="password" name="uesr_psw" id="psw">
+            </p>
+        </section>
+
+        <section>
+            <h2>支付信息</h2>
+            <p>
+                <label for="card">
+                    <span>Card type:</span>
+                </label>
+                <select name="user_card" id="card">
+                    <option value="visa" selected>Visa</option>
+                    <option value="mc">Mastercard</option>
+                    <option value="amex">Ameracan Express</option>
+                </select>
+            </p>
+            <p>
+                <label for="cardnum">
+                    <span>Card number:</span>
+                    <strong>
+                        <abbr title="required">*</abbr>
+                    </strong>
+                </label>
+                <input type="text" name="user_card_num" id="cardnum">
+            </p>
+            <p>
+                <label for="date">
+                    <span>Expiration:</span>
+                    <strong>
+                        <abbr title="required">*</abbr>
+                    </strong>
+                    <em>formatted as mm/yy</em>
+                </label>
+                <input type="date" name="user_date" id="date">
+            </p>
+        </section>
+        <p>
+            <button type="submit">commit the information</button>
+        </p>
+    </form>
+    <form action="" method="GET">
+        <div>
+            <select id="groups" name="groups" multiple>
+                <optgroup label="fruits">
+                    <option value="banana">Banana</option>
+                    <option selected>Cherry</option>
+                    <option>Lemon</option>
+                </optgroup>
+                <optgroup label="vegetables">
+                    <option>Carrot</option>
+                    <option>Eggplant</option>
+                    <option>Potato</option>
+                </optgroup>
+            </select>
+        </div>
+        <div>
+            <label for="myFruit">What's your favorite fruit?</label>
+            <input type="text" name="myFruit" id="myFruit" list="mySuggestion">
+            <datalist id="mySuggestion">
+                <option>Apple</option>
+                <option>Banana</option>
+                <option>Blackberry</option>
+                <option>Blueberry</option>
+                <option>Lemon</option>
+                <option>Lychee</option>
+                <option>Peach</option>
+                <option>Pear</option>
+            </datalist>
+        </div>
+        <div>
+            <label for="myFruit">What is your favorite fruit? (With fallback)</label>
+            <input type="text" id="myFruit" name="fruit" list="fruitList">
+
+            <datalist id="fruitList">
+                <label for="suggestion">or pick a fruit</label>
+                <select id="suggestion" name="altFruit">
+                    <option>Apple</option>
+                    <option>Banana</option>
+                    <option>Blackberry</option>
+                    <option>Blueberry</option>
+                    <option>Lemon</option>
+                    <option>Lychee</option>
+                    <option>Peach</option>
+                    <option>Pear</option>
+                </select>
+            </datalist>
+        </div>
+        <div>
+            <button type="submit" name="button" value="hahaha">submit button</button>
+        </div>
+        <br>
+        <br>
+        <br>
     </form>
 </body>
 
