--- a/1.html
+++ b/1.html
@@ -2,28 +2,17 @@
 <style>
     body {
   width: 100%;
-  margin: 2em auto;
-  font: .9em/1.2 Arial, Helvetica, sans-serif;
-}         
-.container > div {
-  border-radius: 5px;
-  padding: 10px;
-  background-color: rgb(207,232,220);
-  border: 2px solid rgb(79,185,227);
-}  
-                .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-auto-rows: minmax(100px, auto);
-  grid-gap: 20px;
-}
+
+}    
+div{
+  width: 100%;
+  background: red;
+  margin-left: 50%;
+  border: black solid 5px;
+
+}     
+
 </style>
 <div class="container">
-    <div>One</div>
-    <div>Two</div>
-    <div>Three</div>
-    <div>Four</div>
-    <div>Five</div>
-    <div>Six</div>
-    <div>Seven</div>
+好好
   </div>                      
