--- a/1.html
+++ b/1.html
@@ -1,18 +1,25 @@
-<!-- Learn about this code on MDN: https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Grids -->
-<style>
-    body {
-  width: 100%;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
 
-}    
-div{
-  width: 100%;
-  background: red;
-  margin-left: 50%;
-  border: black solid 5px;
+  </style>
+</head>
+<body>
+  <div class="div1">
+    
+  </div>
+</body>
+</html>
 
-}     
-
-</style>
-<div class="container">
-好好
-  </div>                      
+<script>
+  let a = 1;
+  let str = `${a}`;
+  console.log(str);
+  a = 2;
+  console.log(str);
+</script>
