--- a/CSS-17.html
+++ b/CSS-17.html
@@ -23,6 +23,7 @@
       <div class="col">13some<br>content</div>
       <div class="col span6">14this<br>is<br>more<br>content</div>
       <div class="col span3">15this<br>is<br>less</div>
+      <div class="col span3">15this<br>is<br>less</div>
       <div class="col span2 content1">16</div>
       <div class="col span2 content2">16</div>
     </div>
