测试模块的单利模式

--- a/ES-1.html
+++ b/ES-1.html
@@ -9,5 +9,6 @@
 <body>
     
     <script src="./scripts/ES-1.js" type="module"></script>
+    <script src="./scripts/ES-2.js" type="module"></script>
 </body>
 </html>
